# rime-config

./: .dockerignore  .gitignore  .gitmodules  092.custom.yaml  092.schema.yaml  092K_ci.dict.yaml  092chaifen.dict.yaml  092chaifen.schema.yaml  092core.dict.yaml  092core.schema.yaml  092wubi.custom.yaml  092wubi.dict.yaml  092wubi.extend.dict.yaml  092wubi.schema.yaml  092wubi_U.custom.yaml  092wubi_U.dict.yaml  092wubi_U.schema.yaml  092wubi_ci.custom.yaml  092wubi_ci.dict.yaml  092wubi_ci.extended.dict.yaml  092wubi_ci.schema.yaml  092wubi_ci.txt  092wubi_dz.custom.yaml  092wubi_dz.dict.yaml  092wubi_dz.schema.yaml  092wubi_ext.dict.yaml  092wubi_ext.schema.yaml  092wubi_secret.dict.yaml  092wubi_secret.schema.yaml  092wubi_supp.dict.yaml  092wubi_supp1.dict.yaml  092wubi_supp2.dict.yaml  CHERRY—玖重鬼虎 (带助记).trime.yaml  Dockerfile  LICENSE-ULDR  LICENSE-fcitx5-chinese-addons  LICENSE-rime-emoji  LICENSE-rime-opencc_emoji_symbols  LICENSE-rime-pinyin-simp  LICENSE.rime-zrm  (+113 more)
00 必看！ 最全面功能介绍/: ① PC端 小狼毫 如何导入虎码方案.txt  ② 安卓 中文输入法 如何导入 虎码方案配置 .txt  ③ 安卓 中文输入法 如何初始设置.txt  ④ PC + 移动端 虎码方案 功能介绍.txt  ⑤ 虎码方案 所有配置文件简要介绍.txt  ⑥ 斜杠引导 输出扩展符号 查看与修改.txt  【主题】九重键盘 咖啡 标准布局 功能介绍.txt  【主题】光明·黑暗 亂 特殊布局 功能介绍.txt  【主题】安卓 调整键盘行高 底部增高.txt  【滤镜】Emoji滤镜内容如何修改.txt  【滤镜】如何修改滤镜开关的默认状态.txt  【滤镜】如何增删 自定常用字集.txt  【答疑】PC端 五码顶失效 咋回事.txt  【答疑】PC端 小狼毫 如何切换配色.txt  (+12 more)
obfuscate-dict/: .gitignore  Cargo.toml
obfuscate-dict/prebuilt/: secret-mkdict
obfuscate-dict/src/: decode.rs  mkdict.rs
tools-rs/: Cargo.toml
tools-rs/src/: lib.rs  main.rs
tools-rs/src/secret_dict/: decode.rs  mkdict.rs  mod.rs  table.txt
(+99 files in other folders)
